Extracted parsing diff string to method & fixed add file error, added command history window, added mergetool & include whitespace settings, fixed shift click selection in change list, made close button always visible in the error message dialog

--- a/src/app/components/diff-viewer/diff-viewer.component.scss
+++ b/src/app/components/diff-viewer/diff-viewer.component.scss
@@ -94,3 +94,8 @@
 .card-header .badge {
   font-size: 1.1em;
 }
+
+.tag-container {
+  margin: -.5em;
+  height: 2.8em;
+}
